examples/extension-server/project/sse/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: www.example.com
    allowedRoutes:
      namespaces:
        from: Same
    # tls:
    #   mode: Terminate
    #   certificateRefs:
    #   - name: sse-tls  # Assumes the secret from previous steps
    #     namespace: envoy-gateway-system
