examples/extension-server/project/sse/sse_BackendTrafficPolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: sse-timeout-config
  namespace: envoy-gateway-system
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: sse-http-route
    # namespace: envoy-gateway-system
  timeout:
    http:
      connectionIdleTimeout: 0s # Disable idle timeout for SSE traffic only
  # http2:
  #   initialStreamWindowSize: 14000
  #   maxConcurrentStreams: 100
