examples/extension-server/project/sse/sse_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sse-http-route
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - name: eg
  hostnames:
  - www.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /time-stream
    backendRefs:
    - name: sse-server
      port: 8081
    timeouts:
      request: 0s # Infinite timeout for persistent SSE connections
  - matches:
    - path:
        type: PathPrefix
        value: /stock-market-stream   
    filters:
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: API
            name: sse-api
    backendRefs:
    - name: sse-server
      port: 8081
